<resources>
    <string name="app_name">mod_home</string>

    <string name="tab_home">首页</string>
    <string name="tab_video">视频</string>
    <string name="tab_community">社区</string>
    <string name="tab_mine">我的</string>


    <string name="english">english</string>
    <string name="chinese">中文</string>


    <string name="user_pictures">拍照</string>
    <string name="user_album">相册</string>

    <string name="default_save">保存</string>
    <string name="user_info_head">头像</string>
    <string name="user_info_name">昵称</string>
    <string name="user_info_input_name">输入用户名称</string>
    <string name="user_info_phone">手机号</string>
    <string name="user_info_sex">性别</string>
    <string name="user_info_birthday">生日</string>
    <string name="user_info_input_birthday">点击设置生日</string>
    <string name="user_info_signature">签名</string>
    <string name="user_info_input_signature">请输入您的个性签名</string>
    <string name="default_save_success">保存成功</string>
    <string name="update_status_running">下载中 %d%%</string>
    <string name="update_status_successful">下载完成，点击安装</string>

    <string name="default_logout">退出登录</string>
    <string name="search">搜索</string>
    <string name="default_collection">收藏</string>
    <string name="default_cache">缓存</string>
    <string name="look_decord">观看记录</string>
    <string name="collect_list">收藏</string>
    <string name="txt_logout">退出登陆</string>
    <string name="txt_recommend_list">推荐列表</string>
    <string name="give_a_like">点赞</string>
    <string name="discuss">评论</string>


</resources>