<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.xwl.common_lib.bean.User" />

        <variable
            name="activity"
            type="com.example.mod_home.ui.activity.UserInfoActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_dce0e4">

        <com.xwl.common_lib.views.TitleBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:middleText="@string/setting_user_info" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginTop="@dimen/dimen_size_dp_10"
            android:paddingStart="@dimen/dimen_size_dp_14"
            android:paddingEnd="@dimen/dimen_size_dp_8"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_info_head"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/dimen_size_dp_12"
                android:paddingBottom="@dimen/dimen_size_dp_12"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_size_sp_15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_head"
                android:layout_width="@dimen/dimen_size_dp_40"
                android:layout_height="@dimen/dimen_size_dp_40"
                android:contentDescription="@null"
                android:paddingStart="@dimen/dimen_size_dp_6"
                android:src="@mipmap/default_head"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_head_next"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_head_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:paddingStart="@dimen/dimen_size_dp_6"
                android:src="@mipmap/ic_next"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:paddingStart="@dimen/dimen_size_dp_14"
            android:background="@color/color_dce0e4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="@dimen/dimen_size_dp_14"
            android:paddingEnd="@dimen/dimen_size_dp_8"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_info_name"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/dimen_size_dp_12"
                android:paddingBottom="@dimen/dimen_size_dp_12"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_size_sp_15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <com.xwl.common_lib.views.ClearEditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/dimen_size_dp_10"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="10dp"
                android:gravity="end|center_vertical"
                android:maxLength="16"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/color_898e92"
                android:inputType="text"
                android:textSize="@dimen/dimen_size_sp_12"
                android:text="@{user.getName()}"
                android:hint="@string/user_info_input_name"
                android:textColorHint="@color/color_898e92"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_name_next"
                app:layout_constraintStart_toEndOf="@+id/tv_name_title"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_name_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:paddingStart="@dimen/dimen_size_dp_6"
                android:src="@mipmap/ic_next"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:paddingStart="@dimen/dimen_size_dp_14"
            android:background="@color/color_f0f2f4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="@dimen/dimen_size_dp_14"
            android:paddingEnd="@dimen/dimen_size_dp_8"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_info_phone"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/dimen_size_dp_12"
                android:paddingBottom="@dimen/dimen_size_dp_12"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_size_sp_15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/dimen_size_dp_10"
                android:paddingBottom="@dimen/dimen_size_dp_10"
                android:paddingEnd="@dimen/dimen_size_dp_4"
                android:textColor="@color/color_898e92"
                android:text="@{user.phone}"
                android:textSize="@dimen/dimen_size_sp_12"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="13800138000" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_size_dp_10"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="@{(view)->activity.showSelectSexDialog()}"
            android:paddingStart="@dimen/dimen_size_dp_14"
            android:paddingEnd="@dimen/dimen_size_dp_8"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_info_sex"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/dimen_size_dp_12"
                android:paddingBottom="@dimen/dimen_size_dp_12"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_size_sp_15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@{user.sex == null ? `--` : user.sex}"
                android:paddingTop="@dimen/dimen_size_dp_10"
                android:paddingBottom="@dimen/dimen_size_dp_10"
                android:textColor="@color/color_898e92"
                android:textSize="@dimen/dimen_size_sp_12"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_sex_next"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_sex_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:paddingStart="@dimen/dimen_size_dp_6"
                android:src="@mipmap/ic_next"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/dimen_size_dp_14"
            android:background="@color/color_f0f2f4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="@dimen/dimen_size_dp_14"
            android:paddingEnd="@dimen/dimen_size_dp_8"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_info_birthday"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/dimen_size_dp_12"
                android:paddingBottom="@dimen/dimen_size_dp_12"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_size_sp_15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_birthday"
                android:layout_width="@dimen/dimen_size_dp_100"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:paddingTop="@dimen/dimen_size_dp_10"
                android:paddingBottom="@dimen/dimen_size_dp_10"
                android:text="@{user.birthday}"
                android:hint="@string/user_info_input_birthday"
                android:textColor="@color/color_898e92"
                android:textColorHint="@color/color_898e92"
                android:textSize="@dimen/dimen_size_sp_12"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_birthday_next"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_birthday_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:paddingStart="@dimen/dimen_size_dp_6"
                android:src="@mipmap/ic_next"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/dimen_size_dp_14"
            android:background="@color/color_f0f2f4" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="@dimen/dimen_size_dp_14"
            android:paddingEnd="@dimen/dimen_size_dp_8"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_signture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_info_signature"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/dimen_size_dp_12"
                android:paddingBottom="@dimen/dimen_size_dp_12"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_size_sp_15"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <com.xwl.common_lib.views.ClearEditText
                android:id="@+id/et_signature"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/dimen_size_sp_10"
                android:background="@null"
                android:drawablePadding="@dimen/dimen_size_dp_10"
                android:gravity="end|center_vertical"
                android:maxLength="32"
                android:maxLines="2"
                android:singleLine="true"
                android:text="@{user.signature}"
                android:textColor="@color/color_898e92"
                android:textSize="@dimen/dimen_size_sp_12"
                android:inputType="text"
                android:hint="@string/user_info_input_signature"
                android:textColorHint="@color/color_898e92"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_signature_next"
                app:layout_constraintStart_toEndOf="@+id/tv_signture"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_signature_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:paddingStart="@dimen/dimen_size_dp_6"
                android:src="@mipmap/ic_next"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--中文字符使用：android:text='@{user.name? "确定" :"OK"}'-->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_save"
            android:layout_width="200dp"
            android:layout_height="42dp"
            android:layout_marginLeft="@dimen/dimen_size_dp_16"
            android:layout_marginTop="@dimen/dimen_size_dp_50"
            android:layout_marginRight="@dimen/dimen_size_dp_16"
            android:background="@color/color_0165B8"
            android:foreground="?attr/selectableItemBackground"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/default_save"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_size_sp_16"
            tools:ignore="MissingConstraints" />
    </LinearLayout>
</layout>